feat: hero iamges update and minor SEO corrections

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -11,7 +11,7 @@ metadata:
   title:
     default: Krishna Academy
     template: '%s — Krishna Academy'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+  description: "कृष्णा Academy: जहाँ छात्र सफलता के लिए सीखते और विकसित होते हैं"
   robots:
     index: true
     follow: true
